--- a/packages/extensionmanager/style/base.css
+++ b/packages/extensionmanager/style/base.css
@@ -102,7 +102,10 @@
 }
 
 .jp-extensionmanager-disclaimer {
-  padding: 4px;
+  color: var(--jp-ui-font-color1);
+  font-size: var(--jp-ui-font-size0);
+  font-weight: 600;
+  margin: 8px 8px 8px 32px;
 }
 
 .jp-extensionmanager-search-wrapper input {
