Make variable table scrollable

--- a/style/variables.css
+++ b/style/variables.css
@@ -35,6 +35,7 @@
 .jp-DebuggerVariableDetails {
   color: var(--jp-ui-font-color1);
   font-size: var(--jp-ui-font-size1);
+  overflow: auto;
 }
 
 .jp-DebuggerVariableDetails table,
