--- a/packages/services/examples/browser/templates/index.html
+++ b/packages/services/examples/browser/templates/index.html
@@ -11,7 +11,7 @@
       {{ page_config_full | tojson }}
     </script>
   
-    <script src="{{base_url | e}}static/example_app/bundle.js"></script>
+    <script src="{{base_url | e}}static/main/bundle.js"></script>
     <pre id='output'></pre>
   </body>
 </html>
